.minikube/minikube.training/services/03-mysql.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: minikube-training
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mysql
  template:
    metadata:
      namespace: minikube-training
      labels:
        service: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: database
          mountPath: "/var/lib/mysql"
        - name: mysql-root-password
          mountPath: /run/secrets/mysql_root_password
          readOnly: true
        - name: mysql-user
          mountPath: /run/secrets/mysql_user
          readOnly: true
        - name: mysql-password
          mountPath: /run/secrets/mysql_password
          readOnly: true
        - name: mysql-database
          mountPath: /run/secrets/mysql_database
          readOnly: true
      volumes:
      - name: database
        persistentVolumeClaim:
          claimName: minikube-training-database-pvc
      - name: mysql-root-password
        secret:
          secretName: mysql-secrets
          items:
          - key: mysql_root_password
            path: mysql_root_password
      - name: mysql-user
        secret:
          secretName: mysql-secrets
          items:
          - key: mysql_user
            path: mysql_user
      - name: mysql-password
        secret:
          secretName: mysql-secrets
          items:
          - key: mysql_password
            path: mysql_password
      - name: mysql-database
        secret:
          secretName: mysql-secrets
          items:
          - key: mysql_database
            path: mysql_database
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: minikube-training
spec:
  selector:
    service: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: NodePort
