.minikube/minikube.training/services/07-nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: minikube-training
spec:
  backend:
    serviceName: nginx
    servicePort: 80
